Se arrego el 404 del catalogo

--- a/html/Catalogo.html
+++ b/html/Catalogo.html
@@ -48,7 +48,7 @@
                 </div>
                 <div class="row ">
                     <div class="col-10 p-0 mx-auto d-flex flex-wrap justify-content-around bg-light p-0">
-                        <a href="/html/Producto.html" class="text-decoration-none text-dark my-1">
+                        <a href="Producto.html" class="text-decoration-none text-dark my-1">
                           <div class="card" style="width: 15rem; height: auto;">
                               <img src="../Resources/kit Arrastre 1.png" class="card-img-top" alt="...">
                               <div class="card-body">
