Efectos Hover-Mejoras Footer

--- a/html/Producto.html
+++ b/html/Producto.html
@@ -103,22 +103,18 @@
                             <p class="text-muted">Kit de arrastre de alta calidad, ideal para mantener el rendimiento y la seguridad de tu moto. Incluye piñón, catalina y cadena fabricados con materiales resistentes al desgaste, garantizando una transmisión suave y duradera. Perfecto para quienes buscan confiabilidad y un excelente desempeño en cada recorrido.</p>
 
                             <label for="cantidad" class="form-label">Cantidad</label>
-                            <select id="cantidad" class="form-select w-auto mb-3">
-                                <option>1 Unidad</option>
-                                <option>2 Unidades</option>
-                                <option>3 Unidades</option>
-                            </select>
+                            <input type="number" value="1" min="1" max="30" class="mx-2">
 
-                            <button class="btn btn-dark w-100" onclick="abrirEnOtraPestana()">Comprar</button>
+                            <button class="btn btn-dark w-100 mt-3" onclick="abrirEnOtraPestana()">Comprar</button>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
         <div class="row">
-              <div class="col-md-12 border-top border-1 border-light bg-dark text-light mt-3 p-0">
+              <div class="col-md-10 mx-auto mt-5 rounded-top-4 border-light bg-dark text-light footer">
                   <div class="mx-2 mt-2">
-                    <h5 id="acerca">Acerca de Nosotros</h5>
+                    <h5 class="mt-3 fw-bold fs-6" id="acerca">Acerca de Nosotros</h5>
                     <p> En RP MECHANIC, nos especializamos en la venta de repuestos para motos y carros, ofreciendo productos de calidad a precios competitivos. Nuestro compromiso es brindar atención personalizada y soluciones confiables para que tu vehículo siempre esté en óptimas condiciones.</p>
                   </div>
                   <div class="d-flex justify-content-between contenedorlinks">
@@ -129,8 +125,8 @@
                     </div>
                     <div class="d-flex mx-2 contenedorContactos">
                       <p>Contactanos:</p>
-                      <a href="" class="mx-2"><img src="" alt=""><img src="../Resources/iconWhatsApp.png" width="25px" height="25px" alt="WhatsApp"></a>
-                      <a href=""><img src="../Resources/iconGmail.png" width="25px" height="25px" alt="Gmail"></a>
+                      <a href="" class="mx-2 aRedes"><img src="" alt=""><img src="../Resources/iconWhatsApp.png" width="25px" height="25px" alt="WhatsApp"></a>
+                      <a href="" class="aRedes"><img src="../Resources/iconGmail.png" width="25px" height="25px" alt="Gmail"></a>
                     </div>
                   </div>
               </div>
