--- a/html/Catalogo.html
+++ b/html/Catalogo.html
@@ -48,7 +48,7 @@
                 </div>
                 <div class="row ">
                     <div class="col-10 p-0 mx-auto d-flex flex-wrap justify-content-around bg-light p-0">
-                        <a href="Producto.html" class="text-decoration-none text-dark my-1">
+                        <a href="Producto.html" class="text-decoration-none text-dark my-1 carta">
                           <div class="card" style="width: 15rem; height: auto;">
                               <img src="../Resources/kit Arrastre 1.png" class="card-img-top" alt="...">
                               <div class="card-body">
@@ -57,7 +57,7 @@
                               </div>
                           </div>
                       </a>
-                      <a href="#" class="text-decoration-none text-dark my-1">
+                      <a href="#" class="text-decoration-none text-dark my-1 carta">
                           <div class="card" style="width: 15rem; height: auto;">
                               <img src="../Resources/Filtro aire 1.png" class="card-img-top" alt="...">
                               <div class="card-body">
@@ -66,7 +66,7 @@
                               </div>
                           </div>
                       </a>
-                      <a href="#" class="text-decoration-none text-dark my-1">
+                      <a href="#" class="text-decoration-none text-dark my-1 carta">
                           <div class="card" style="width: 15rem; height: auto;">
                               <img src="../Resources/Espejos Aleron 1.png" class="card-img-top" alt="...">
                               <div class="card-body">
@@ -75,7 +75,7 @@
                               </div>
                           </div>
                       </a>
-                      <a href="#" class="text-decoration-none text-dark my-1">
+                      <a href="#" class="text-decoration-none text-dark my-1 carta">
                         <div class="card" style="width: 15rem; height: auto;">
                             <img src="../Resources/Lubricante 1.png" class="card-img-top" alt="...">
                             <div class="card-body">
@@ -86,8 +86,8 @@
                     </a>
 
                     </div>
-                    <div class="col-10 p-0 mx-auto d-flex flex-wrap justify-content-around bg-light p-0">
-                        <a href="#" class="text-decoration-none text-dark my-1">
+                    <div class="col-10 p-0 mx-auto pt-3 d-flex flex-wrap justify-content-around bg-light p-0">
+                        <a href="#" class="text-decoration-none text-dark my-1 carta">
                           <div class="card" style="width: 15rem; height: auto;">
                               <img src="../Resources/Direccion Asistida 1.png" class="card-img-top" alt="...">
                               <div class="card-body">
@@ -96,7 +96,7 @@
                               </div>
                           </div>
                       </a>
-                      <a href="#" class="text-decoration-none text-dark my-1">
+                      <a href="#" class="text-decoration-none text-dark my-1 carta">
                           <div class="card" style="width: 15rem; height: auto;">
                               <img src="../Resources/Set 2 Llantas.png" class="card-img-top" alt="...">
                               <div class="card-body">
@@ -105,7 +105,7 @@
                               </div>
                           </div>
                       </a>
-                      <a href="#" class="text-decoration-none text-dark my-1">
+                      <a href="#" class="text-decoration-none text-dark my-1 carta">
                           <div class="card" style="width: 15rem; height: auto;">
                               <img src="../Resources/Pastillas freno.png" class="card-img-top" alt="...">
                               <div class="card-body">
@@ -114,7 +114,7 @@
                               </div>
                           </div>
                       </a>
-                        <a href="#" class="text-decoration-none text-dark my-1">
+                        <a href="#" class="text-decoration-none text-dark my-1 carta">
                           <div class="card" style="width: 15rem; height: auto;">
                               <img src="../Resources/AceiteMoto.png" class="card-img-top" alt="...">
                               <div class="card-body">
@@ -146,7 +146,7 @@
             <div class="row">
               <div class="col-md-12 border-top border-1 border-light bg-dark text-light ">
                   <div class="mx-2 mt-2">
-                    <h5 id="acerca">Acerca de Nosotros</h5>
+                    <h5 class="mt-3 fw-bold fs-6" id="acerca">Acerca de Nosotros</h5>
                     <p> En RP MECHANIC, nos especializamos en la venta de repuestos para motos y carros, ofreciendo productos de calidad a precios competitivos. Nuestro compromiso es brindar atención personalizada y soluciones confiables para que tu vehículo siempre esté en óptimas condiciones.</p>
                   </div>
                   <div class="d-flex justify-content-between contenedorlinks">
@@ -157,8 +157,8 @@
                     </div>
                     <div class="d-flex mx-2 contenedorContactos">
                       <p>Contactanos:</p>
-                      <a href="" class="mx-2"><img src="" alt=""><img src="../Resources/iconWhatsApp.png" width="25px" height="25px" alt="WhatsApp"></a>
-                      <a href=""><img src="../Resources/iconGmail.png" width="25px" height="25px" alt="Gmail"></a>
+                      <a href="" class="mx-2 aRedes"><img src="" alt=""><img src="../Resources/iconWhatsApp.png" width="25px" height="25px" alt="WhatsApp"></a>
+                      <a href="" class="aRedess"><img src="../Resources/iconGmail.png" width="25px" height="25px" alt="Gmail"></a>
                     </div>
                   </div>
               </div>
