--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 </div>
                 <div class="row ">
                   <div class="col-10 p-0 mx-auto d-flex flex-wrap justify-content-around bg-light p-0">
-                      <a href="/html/Producto.html" class="text-decoration-none text-dark my-1">
+                      <a href="/html/Producto.html" class="text-decoration-none text-dark my-1 carta ">
                           <div class="card" style="width: 15rem; height: auto;">
                               <img src="Resources/kit Arrastre 1.png" class="card-img-top" alt="...">
                               <div class="card-body">
@@ -83,7 +83,7 @@
                               </div>
                           </div>
                       </a>
-                      <a href="#" class="text-decoration-none text-dark my-1">
+                      <a href="#" class="text-decoration-none text-dark my-1 carta">
                           <div class="card" style="width: 15rem; height: auto;">
                               <img src="Resources/Filtro aire 1.png" class="card-img-top" alt="...">
                               <div class="card-body">
@@ -92,7 +92,7 @@
                               </div>
                           </div>
                       </a>
-                      <a href="#" class="text-decoration-none text-dark my-1">
+                      <a href="#" class="text-decoration-none text-dark my-1 carta">
                           <div class="card" style="width: 15rem; height: auto;">
                               <img src="Resources/Espejos Aleron 1.png" class="card-img-top" alt="...">
                               <div class="card-body">
@@ -101,7 +101,7 @@
                               </div>
                           </div>
                       </a>
-                      <a href="#" class="text-decoration-none text-dark my-1">
+                      <a href="#" class="text-decoration-none text-dark my-1 carta">
                         <div class="card" style="width: 15rem; height: auto;">
                             <img src="Resources/Lubricante 1.png" class="card-img-top" alt="...">
                             <div class="card-body">
@@ -145,7 +145,7 @@
                 </div>
                 <div class="row ">
                   <div class="col-10 p-0 mx-auto d-flex flex-wrap justify-content-around bg-light p-0">
-                      <a href="#" class="text-decoration-none text-dark my-1">
+                      <a href="#" class="text-decoration-none text-dark my-1 carta">
                           <div class="card" style="width: 15rem; height: auto;">
                               <img src="Resources/AceiteMoto.png" class="card-img-top" alt="...">
                               <div class="card-body">
@@ -154,7 +154,7 @@
                               </div>
                           </div>
                       </a>
-                      <a href="#" class="text-decoration-none text-dark my-1">
+                      <a href="#" class="text-decoration-none text-dark my-1 carta">
                           <div class="card" style="width: 15rem; height: auto;">
                               <img src="Resources/kit Arrastre 1.png" class="card-img-top" alt="...">
                               <div class="card-body">
@@ -163,7 +163,7 @@
                               </div>
                           </div>
                       </a>
-                      <a href="#" class="text-decoration-none text-dark my-1">
+                      <a href="#" class="text-decoration-none text-dark my-1 carta">
                           <div class="card" style="width: 15rem; height: auto;">
                               <img src="Resources/Llanta Moto .png" class="card-img-top" alt="...">
                               <div class="card-body">
@@ -172,7 +172,7 @@
                               </div>
                           </div>
                       </a>
-                      <a href="#" class="text-decoration-none text-dark my-1">
+                      <a href="#" class="text-decoration-none text-dark my-1 carta">
                         <div class="card" style="width: 15rem; height: auto;">
                             <img src="Resources/Lubricante 1.png" class="card-img-top" alt="...">
                             <div class="card-body">
@@ -216,7 +216,7 @@
                 </div>
                 <div class="row ">
                   <div class="col-10 p-0 mx-auto d-flex flex-wrap justify-content-around bg-light p-0">
-                      <a href="#" class="text-decoration-none text-dark my-1">
+                      <a href="#" class="text-decoration-none text-dark my-1 carta">
                           <div class="card" style="width: 15rem; height: auto;">
                               <img src="Resources/Direccion Asistida 1.png" class="card-img-top" alt="...">
                               <div class="card-body">
@@ -225,7 +225,7 @@
                               </div>
                           </div>
                       </a>
-                      <a href="#" class="text-decoration-none text-dark my-1">
+                      <a href="#" class="text-decoration-none text-dark my-1 carta">
                           <div class="card" style="width: 15rem; height: auto;">
                               <img src="Resources/Set 2 Llantas.png" class="card-img-top" alt="...">
                               <div class="card-body">
@@ -234,7 +234,7 @@
                               </div>
                           </div>
                       </a>
-                      <a href="#" class="text-decoration-none text-dark my-1">
+                      <a href="#" class="text-decoration-none text-dark my-1 carta">
                           <div class="card" style="width: 15rem; height: auto;">
                               <img src="Resources/Pastillas freno.png" class="card-img-top" alt="...">
                               <div class="card-body">
@@ -243,7 +243,7 @@
                               </div>
                           </div>
                       </a>
-                      <a href="#" class="text-decoration-none text-dark my-1">
+                      <a href="#" class="text-decoration-none text-dark my-1 carta">
                         <div class="card" style="width: 15rem; height: auto;">
                             <img src="Resources/Amortiguacion Capo.png" class="card-img-top" alt="...">
                             <div class="card-body">
@@ -279,9 +279,9 @@
                 </div>
             </div>
             <div class="row">
-              <div class="col-md-12 border-top border-1 border-light bg-dark text-light ">
+              <div class="col-md-10 mx-auto mt-5 rounded-top-4 border-light bg-dark text-light ">
                   <div class="mx-2 mt-2">
-                    <h5 id="acerca">Acerca de Nosotros</h5>
+                    <h5 class="mt-3 fw-bold fs-6" id="acerca">Acerca de Nosotros</h5>
                     <p> En RP MECHANIC, nos especializamos en la venta de repuestos para motos y carros, ofreciendo productos de calidad a precios competitivos. Nuestro compromiso es brindar atención personalizada y soluciones confiables para que tu vehículo siempre esté en óptimas condiciones.</p>
                   </div>
                   <div class="d-flex justify-content-between contenedorlinks">
@@ -292,15 +292,13 @@
                     </div>
                     <div class="d-flex mx-2 contenedorContactos">
                       <p>Contactanos:</p>
-                      <a href="" class="mx-2"><img src="" alt=""><img src="Resources/iconWhatsApp.png" width="25px" height="25px" alt="WhatsApp"></a>
-                      <a href=""><img src="Resources/iconGmail.png" width="25px" height="25px" alt="Gmail"></a>
+                      <a href="" class="mx-2 aRedes"><img src="" alt=""><img src="Resources/iconWhatsApp.png" width="25px" height="25px" alt="WhatsApp"></a>
+                      <a href="" class="aRedes"><img src="Resources/iconGmail.png" width="25px" height="25px" alt="Gmail"></a>
                     </div>
                   </div>
               </div>
             </div>
         </div>
-
-    </div>
 
     <script>
       function abrirEnOtraPestana() {
