--- a/html/Producto.html
+++ b/html/Producto.html
@@ -105,7 +105,7 @@
                             <label for="cantidad" class="form-label">Cantidad</label>
                             <input type="number" value="1" min="1" max="30" class="mx-2">
 
-                            <button class="btn btn-dark w-100 mt-3" onclick="abrirEnOtraPestana()">Comprar</button>
+                            <button class="btn btn-dark w-100 mt-3" onclick="abrirEnOtraPestana('Formulario',true)">Comprar</button>
                         </div>
                     </div>
                 </div>
@@ -133,19 +133,7 @@
             </div>
     </div>
 
-    <script>
-        function changeImage(element) {
-            const mainImage = document.getElementById('mainImage');
-            mainImage.src = element.src;
-            document.querySelectorAll('.thumbnail-img').forEach(img => {
-                img.classList.remove('BorderImg');
-            });
-            element.classList.add('BorderImg');
-        }
-        function abrirEnOtraPestana() {
-        window.open("Formulario.html","_self");
-      }
-    </script>
+  <script src="../JS/JsPrincipal.js"></script>
 </body>
 
 </html>
