--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                         <div class="navbar-nav">
                           <a class="nav-link text-light" href="#">Agendar Citas</a>
                           <a class="nav-link text-light" href="#acerca">Acerca de Nosotros</a>
+                          <a class="nav-link text-light" href="/html/Geolocalizacion.html">Tienda Fisica</a>
                         </div>
                       </div>
                     </div>
@@ -114,7 +115,7 @@
               </div>
               <div class="row">
                 <div class="col-10 p-0 mx-auto d-flex justify-content-end px-3 align-items-center bg-light rounded-bottom pt-1">
-                  <button class="cta"  onclick="abrirEnOtraPestana()">
+                  <button class="cta"  onclick="abrirEnOtraPestana('Catalogo',false)">
                     <span class="hover-underline-animation"> Ver mas</span>
                     <svg
                       id="arrow-horizontal"
@@ -300,10 +301,6 @@
             </div>
         </div>
 
-    <script>
-      function abrirEnOtraPestana() {
-        window.open("html/Catalogo.html","_self");
-      }
-    </script>
+    <script src="JS/JsPrincipal.js"></script>
 </body>
 </html>
