--- a/html/CatalogoCarros.html
+++ b/html/CatalogoCarros.html
@@ -20,7 +20,7 @@
     <div class="container-fluid m-0 p-0">
         <div class="row">
             <div class="col-md-12 p-0">
-               <nav class="navbar navbar-expand-lg bg-body-tertiary m-0 p-0">
+                <nav class="navbar navbar-expand-lg bg-body-tertiary m-0 p-0">
                     <div class="container-fluid bg-primary m-0">
                       <a class="navbar-brand text-light fg-2 fw-bold" href="../index.html" >
                         <img src="../Resources/Icon.jpeg" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
@@ -44,55 +44,16 @@
                 <div class="row">
                     <div
                         class="col-10 p-0 mx-auto d-flex justify-content-between px-3 bg-light align-items-center rounded-top py-3">
-                        <p class="m-0 fw-medium fs-5">Mas vendido</p>
+                        <p class="m-0 fw-medium fs-5">Coches</p>
                     </div>
                 </div>
                 <div class="row ">
                     <div class="col-10 p-0 mx-auto d-flex flex-wrap justify-content-around bg-light p-0">
-                        <a href="Producto.html?id=1" class="text-decoration-none text-dark my-1 carta">
-                          <div class="card" style="width: 15rem; height: auto;">
-                              <img src="../Resources/kit Arrastre 1.png" class="card-img-top" alt="...">
-                              <div class="card-body">
-                                  <h5 class="card-title">Kit Arrastre</h5>
-                                  <p class="card-text">$25.000</p>
-                              </div>
-                          </div>
-                      </a>
-                      <a href="Producto.html?id=2" class="text-decoration-none text-dark my-1 carta">
-                          <div class="card" style="width: 15rem; height: auto;">
-                              <img src="../Resources/Filtro aire 1.png" class="card-img-top" alt="...">
-                              <div class="card-body">
-                                  <h5 class="card-title">Filtro de Aire KTM Duke 200 NG/250NG / 390NG/ ADV Importado</h5>
-                                  <p class="card-text">$55.000</p>
-                              </div>
-                          </div>
-                      </a>
-                      <a href="Producto.html?id=3" class="text-decoration-none text-dark my-1 carta">
-                          <div class="card" style="width: 15rem; height: auto;">
-                              <img src="../Resources/Espejos Aleron 1.png" class="card-img-top" alt="...">
-                              <div class="card-body">
-                                  <h5 class="card-title">Espejos Alerón Naked Universal Lujo Moto</h5>
-                                  <p class="card-text">$60.000</p>
-                              </div>
-                          </div>
-                      </a>
-                      <a href="Producto.html?id=4" class="text-decoration-none text-dark my-1 carta">
-                        <div class="card" style="width: 15rem; height: auto;">
-                            <img src="../Resources/Lubricante 1.png" class="card-img-top" alt="...">
-                            <div class="card-body">
-                                <h5 class="card-title">Lubricante de Cadena Motul C5 + Cepillo + Desengrasante C1</h5>
-                                <p class="card-text">$90.000</p>
-                            </div>
-                        </div>
-                    </a>
-
-                    </div>
-                    <div class="col-10 p-0 mx-auto pt-3 d-flex flex-wrap justify-content-around bg-light p-0">
                         <a href="Producto.html?id=12" class="text-decoration-none text-dark my-1 carta">
                           <div class="card" style="width: 15rem; height: auto;">
                               <img src="../Resources/Direccion Asistida 1.png" class="card-img-top" alt="...">
                               <div class="card-body">
-                                  <h5 class="card-title">Cremallera Dirección Asistida Toyota Corolla 2002-2008</h5>
+                                  <h5 class="card-title">Cremallera Direccion</h5>
                                   <p class="card-text">$390.000</p>
                               </div>
                           </div>
@@ -101,7 +62,7 @@
                           <div class="card" style="width: 15rem; height: auto;">
                               <img src="../Resources/Set 2 Llantas.png" class="card-img-top" alt="...">
                               <div class="card-body">
-                                  <h5 class="card-title">Set 2 Llantas Carro Automovil 185/60r14 Sm 82h</h5>
+                                  <h5 class="card-title">Set 2 Llantas Carro Automovil</h5>
                                   <p class="card-text">$320.000</p>
                               </div>
                           </div>
@@ -110,17 +71,56 @@
                           <div class="card" style="width: 15rem; height: auto;">
                               <img src="../Resources/Pastillas freno.png" class="card-img-top" alt="...">
                               <div class="card-body">
-                                  <h5 class="card-title">Pastilla De Freno Delantera Aveo 2007 2014 </h5>
+                                  <h5 class="card-title">Pastilla De Freno Delantera Aveo</h5>
                                   <p class="card-text">$85.000</p>
                               </div>
                           </div>
                       </a>
-                        <a href="Producto.html?id=5" class="text-decoration-none text-dark my-1 carta">
+                      <a href="Producto.html?id=15" class="text-decoration-none text-dark my-1 carta">
+                        <div class="card" style="width: 15rem; height: auto;">
+                            <img src="../Resources/Amortiguacion Capo.png" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Amortiguadores de Capot</h5>
+                                <p class="card-text">$105.000</p>
+                            </div>
+                        </div>
+                    </a>
+
+                    </div>
+                    <div class="col-10 p-0 mx-auto pt-3 d-flex flex-wrap justify-content-around bg-light p-0">
+                        <a href="Producto.html?id=16" class="text-decoration-none text-dark my-1 carta">
                           <div class="card" style="width: 15rem; height: auto;">
-                              <img src="../Resources/AceiteMoto.png" class="card-img-top" alt="...">
+                              <img src="../Resources/BateriaCarro.png" class="card-img-top" alt="...">
                               <div class="card-body">
-                                  <h5 class="card-title">Aceite Motul 15w50 4t</h5>
-                                  <p class="card-text">$25.000</p>
+                                  <h5 class="card-title">Bateria Automotriz Bosch S4</h5>
+                                  <p class="card-text">$420.000</p>
+                              </div>
+                          </div>
+                      </a>
+                      <a href="Producto.html?id=17" class="text-decoration-none text-dark my-1 carta">
+                          <div class="card" style="width: 15rem; height: auto;">
+                              <img src="../Resources/FiltroAceiteFram.png" class="card-img-top" alt="...">
+                              <div class="card-body">
+                                  <h5 class="card-title">Filtro De Aceite Fram Ultra Synthetic Xg9688</h5>
+                                  <p class="card-text">$45.000</p>
+                              </div>
+                          </div>
+                      </a>
+                      <a href="Producto.html?id=18" class="text-decoration-none text-dark my-1 carta">
+                          <div class="card" style="width: 15rem; height: auto;">
+                              <img src="../Resources/AmortiguadorCarro.png" class="card-img-top" alt="...">
+                              <div class="card-body">
+                                  <h5 class="card-title">Amortiguadores Monroe Gas-Magnum</h5>
+                                  <p class="card-text">$350.000</p>
+                              </div>
+                          </div>
+                      </a>
+                        <a href="Producto.html?id=19" class="text-decoration-none text-dark my-1 carta">
+                          <div class="card" style="width: 15rem; height: auto;">
+                              <img src="../Resources/PastillasFraseras.png" class="card-img-top" alt="...">
+                              <div class="card-body">
+                                  <h5 class="card-title">Pastillas De Freno Traseras Toyota Land Cruiser Prado Tx</h5>
+                                  <p class="card-text">$110.000</p>
                               </div>
                           </div>
                       </a>
@@ -144,7 +144,7 @@
                 </div>
             </div>
         </div>
-                <div class="row">
+               <div class="row">
       <div class="col-md-10 mx-auto mt-5 rounded-top-4 border border-light bg-dark text-light p-4">
 
 
@@ -248,5 +248,4 @@
         </div>
     </div>
 </body>
-    <script src="../JS/JsPrincipal.js"></script>
 </html>
