--- a/html/CatalogoMotos.html
+++ b/html/CatalogoMotos.html
@@ -20,7 +20,7 @@
     <div class="container-fluid m-0 p-0">
         <div class="row">
             <div class="col-md-12 p-0">
-               <nav class="navbar navbar-expand-lg bg-body-tertiary m-0 p-0">
+                <nav class="navbar navbar-expand-lg bg-body-tertiary m-0 p-0">
                     <div class="container-fluid bg-primary m-0">
                       <a class="navbar-brand text-light fg-2 fw-bold" href="../index.html" >
                         <img src="../Resources/Icon.jpeg" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
@@ -44,26 +44,26 @@
                 <div class="row">
                     <div
                         class="col-10 p-0 mx-auto d-flex justify-content-between px-3 bg-light align-items-center rounded-top py-3">
-                        <p class="m-0 fw-medium fs-5">Mas vendido</p>
+                        <p class="m-0 fw-medium fs-5">Motos</p>
                     </div>
                 </div>
                 <div class="row ">
                     <div class="col-10 p-0 mx-auto d-flex flex-wrap justify-content-around bg-light p-0">
-                        <a href="Producto.html?id=1" class="text-decoration-none text-dark my-1 carta">
+                        <a href="Producto.html?id=5" class="text-decoration-none text-dark my-1 carta">
+                          <div class="card" style="width: 15rem; height: auto;">
+                              <img src="../Resources/AceiteMoto.png" class="card-img-top" alt="...">
+                              <div class="card-body">
+                                  <h5 class="card-title">Aceite Motul 15w50 4t</h5>
+                                  <p class="card-text">$25.000</p>
+                              </div>
+                          </div>
+                      </a>
+                      <a href="Producto.html?id=1" class="text-decoration-none text-dark my-1 carta">
                           <div class="card" style="width: 15rem; height: auto;">
                               <img src="../Resources/kit Arrastre 1.png" class="card-img-top" alt="...">
                               <div class="card-body">
                                   <h5 class="card-title">Kit Arrastre</h5>
                                   <p class="card-text">$25.000</p>
-                              </div>
-                          </div>
-                      </a>
-                      <a href="Producto.html?id=2" class="text-decoration-none text-dark my-1 carta">
-                          <div class="card" style="width: 15rem; height: auto;">
-                              <img src="../Resources/Filtro aire 1.png" class="card-img-top" alt="...">
-                              <div class="card-body">
-                                  <h5 class="card-title">Filtro de Aire KTM Duke 200 NG/250NG / 390NG/ ADV Importado</h5>
-                                  <p class="card-text">$55.000</p>
                               </div>
                           </div>
                       </a>
@@ -88,39 +88,39 @@
 
                     </div>
                     <div class="col-10 p-0 mx-auto pt-3 d-flex flex-wrap justify-content-around bg-light p-0">
-                        <a href="Producto.html?id=12" class="text-decoration-none text-dark my-1 carta">
+                        <a href="Producto.html?id=7" class="text-decoration-none text-dark my-1 carta">
                           <div class="card" style="width: 15rem; height: auto;">
-                              <img src="../Resources/Direccion Asistida 1.png" class="card-img-top" alt="...">
+                              <img src="../Resources/LlantaMoto.png" class="card-img-top" alt="...">
                               <div class="card-body">
-                                  <h5 class="card-title">Cremallera Dirección Asistida Toyota Corolla 2002-2008</h5>
-                                  <p class="card-text">$390.000</p>
+                                  <h5 class="card-title">Llanta 150/60r17 Tvs Eurogrip</h5>
+                                  <p class="card-text">$232.000</p>
                               </div>
                           </div>
                       </a>
-                      <a href="Producto.html?id=13" class="text-decoration-none text-dark my-1 carta">
+                      <a href="Producto.html?id=2" class="text-decoration-none text-dark my-1 carta">
                           <div class="card" style="width: 15rem; height: auto;">
-                              <img src="../Resources/Set 2 Llantas.png" class="card-img-top" alt="...">
+                              <img src="../Resources/Filtro aire 1.png" class="card-img-top" alt="...">
                               <div class="card-body">
-                                  <h5 class="card-title">Set 2 Llantas Carro Automovil 185/60r14 Sm 82h</h5>
-                                  <p class="card-text">$320.000</p>
+                                  <h5 class="card-title">Filtro de Aire KTM DUKE 200</h5>
+                                  <p class="card-text">$55.000</p>
                               </div>
                           </div>
                       </a>
-                      <a href="Producto.html?id=14" class="text-decoration-none text-dark my-1 carta">
+                      <a href="Producto.html?id=20" class="text-decoration-none text-dark my-1 carta">
                           <div class="card" style="width: 15rem; height: auto;">
-                              <img src="../Resources/Pastillas freno.png" class="card-img-top" alt="...">
+                              <img src="../Resources/BateriaMoto.png" class="card-img-top" alt="...">
                               <div class="card-body">
-                                  <h5 class="card-title">Pastilla De Freno Delantera Aveo 2007 2014 </h5>
-                                  <p class="card-text">$85.000</p>
+                                  <h5 class="card-title">Bateria 12v 7.5 Ah 7,5ah O 7 Ah Fuli Battery</h5>
+                                  <p class="card-text">$345.000</p>
                               </div>
                           </div>
                       </a>
-                        <a href="Producto.html?id=5" class="text-decoration-none text-dark my-1 carta">
+                        <a href="Producto.html?id=11" class="text-decoration-none text-dark my-1 carta">
                           <div class="card" style="width: 15rem; height: auto;">
-                              <img src="../Resources/AceiteMoto.png" class="card-img-top" alt="...">
+                              <img src="../Resources/CascoIntegral.png" class="card-img-top" alt="...">
                               <div class="card-body">
-                                  <h5 class="card-title">Aceite Motul 15w50 4t</h5>
-                                  <p class="card-text">$25.000</p>
+                                  <h5 class="card-title">Casco Edge Integral Shanghai Quartz Dot Y Ece 2206</h5>
+                                  <p class="card-text">$337.000</p>
                               </div>
                           </div>
                       </a>
