--- a/html/Formulario.html
+++ b/html/Formulario.html
@@ -9,8 +9,11 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq"
         crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../Css/Formulario.css">
-    <title>Document</title>
+    <title>RP MECHANIC</title>
 </head>
 
 <body>
@@ -29,55 +32,65 @@
         </div>
         <div class="row m-0 p-0">
             <div class="col-md-12 p-0 m-0 ">
-                <div class="row justify-content-center p-0 m-0">
+                <div class="row justify-content-center p-0 m-0 mt-5 cartaFormulario">
                     <div class="col-md-5 d-flex justify-content-center align-items-center TarjetaForm p-0   ">
-                        <form action="" class="contenedorForm">
+                        <form id="formulario" action="" class="contenedorForm">
                             <div class="my-2">
                                 <label for="" class="form-label">Nombres y Apellidos</label>
-                                <input type="text" class="form-control" id="">
+                                <input type="text" class="form-control" id="" name="user_name" required>
                             </div>
                             <div class="d-flex contenedorInput my-2">
                                 <div class="col">
                                     <label for="" class="form-label">Numero de Identificacion</label>
-                                    <div class="d-flex"><select class="form-select" aria-label="Default select example">
+                                    <div class="d-flex">
+                                        <select class="form-select" aria-label="Default select example"
+                                            name="user_id_type">
                                             <option selected>CC</option>
-                                             <option value="1">CE</option>
+                                            <option value="CE">CE</option>
                                         </select>
-                                        <input type="number" class="form-control m-0 mx-1 form-CC" id="">
+                                        <input type="number" class="form-control m-0 mx-1 form-CC" id=""
+                                            name="user_id_number" required>
                                     </div>
                                 </div>
                                 <div class="col mx-2">
                                     <label for="" class="form-label">Direccion</label>
-                                    <input type="text" class="form-control" id="">
+                                    <input type="text" class="form-control" id="" name="user_address" required>
                                 </div>
                             </div>
 
                             <div class="m-0 p-0 my-2">
                                 <label for="exampleInputEmail1" class="form-label">Email address</label>
                                 <input type="email" class="form-control" id="exampleInputEmail1"
-                                    aria-describedby="emailHelp">
+                                    aria-describedby="emailHelp" name="user_email" required>
                             </div>
-                            <button class="btn btn-dark w-100 my-4">Comprar</button>
+                            <button type="submit" class="btn btn-dark w-100 my-4">Comprar</button>
                         </form>
+
+
                     </div>
-                    <div class="col-md-3 p-0 border border-2 border-black TarjetaImg">
-                        <div class="col-md-12 bg-light p-3 TarjetaContenido">
-                            <div class="ContenedorImg">
-                                <img src="../Resources/kit Arrastre 1.png" alt="">
-                            </div>
-                            <div class="px-2 mt-2 m-0 p-0 ">
-                                <h4 class="my-0 TituloPC">Kit Arrastre</h4>
-                                <small class="text-muted">Marca Motul</small>
-                                <p class="text-muted m-0">Cantidad: 1</p>
-                                <h5 class="fs-4">$ 25.000</h5>
-                            </div>
-                        </div>
-                        
+                    <div class="col-md-3 p-0 border border-2 border-black TarjetaImg" id="resumenCompra">
+
+
                     </div>
                 </div>
             </div>
         </div>
     </div>
+    </div>
+    <div class="modal fade" id="successModal" tabindex="-1" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content p-3 text-center">
+                <h5 class="modal-title mb-3">¡Compra realizada!</h5>
+                <p>Tu pedido se ha enviado correctamente.</p>
+                <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Volver al producto</button>
+            </div>
+        </div>
+    </div>
+    <script src="../JS/Formulario.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
+    <script>
+        emailjs.init('Imwy-wXiOc_OflV_m');
+    </script>
 
 </body>
 
